[workspace]
resolver = "2"
members = [
    "common",
    "ring",
]

[workspace.dependencies]
ark-std = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-poly = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }
fflonk = { git = "https://github.com/w3f/fflonk", default-features = false, rev = "1e854f35e9a65d08b11a86291405cdc95baa0a35" }
rayon = { version = "1", default-features = false }
